@@ -2,13 +2,14 @@ package aria1th.main.spawnproofhelper.utils;
 
 import net.minecraft.block.*;
 import net.minecraft.client.MinecraftClient;
+import net.minecraft.client.gui.screen.ingame.InventoryScreen;
 import net.minecraft.client.world.ClientWorld;
 import net.minecraft.entity.EntityType;
-import net.minecraft.entity.player.PlayerEntity;
-import aria1th.main.spawnproofhelper.config.Configs;
 import net.minecraft.entity.player.PlayerInventory;
+import net.minecraft.inventory.Inventory;
 import net.minecraft.item.Item;
 import net.minecraft.tag.ItemTags;
+import net.minecraft.tag.TagKey;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.util.math.Direction;
@@ -16,11 +17,9 @@ import net.minecraft.util.Hand;
 import net.minecraft.util.hit.BlockHitResult;
 import net.minecraft.text.Text;
 import net.minecraft.item.Items;
-import net.minecraft.item.ItemConvertible;
 import net.minecraft.item.ItemStack;
 import net.minecraft.network.packet.c2s.play.UpdateSelectedSlotC2SPacket;
 import net.minecraft.world.World;
-import net.minecraft.world.SpawnHelper;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -35,14 +34,12 @@ public class SpawnProofLocation {
     private static boolean enabled = false;
     private static String previousMessage = null;
     private static final LinkedHashMap<Long, Long> nanotimeMap = new LinkedHashMap<>();
-    private static final List<Item> spawnProofItems =  Stream.of(
-                    ItemTags.CARPETS.values().stream(),
-                    ItemTags.SLABS.values().stream(),
-                    ItemTags.WOODEN_PRESSURE_PLATES.values().stream(),
-                    ItemTags.BUTTONS.values().stream(),
-                    Collections.singletonList(Items.MOSS_CARPET).stream()
-            )
-            .flatMap(a->a).collect(Collectors.toList());
+    private static final List<TagKey<Item>> spawnProofItems =  List.of(
+                    ItemTags.WOOL_CARPETS,
+                    ItemTags.SLABS,
+                    ItemTags.WOODEN_PRESSURE_PLATES,
+                    ItemTags.BUTTONS
+            );
     //private final static List<Item> CarpetTypes = ItemTags.CARPETS.values();
     //private final static List<Item> SlabTypes = ItemTags.SLABS.values();
     //private final static List<Item> PressurePlateTypes = ItemTags.WOODEN_PRESSURE_PLATES.values();
@@ -54,11 +51,11 @@ public class SpawnProofLocation {
     }
     public static void switchOnOff(){
         enabled = !enabled;
-        printMessageToChat(Text.of("Spawnproofing Turned "+ "%s".format(enabled ? "ON" : "OFF")));
+        printMessageToChat(Text.of("Spawnproofing Turned "+ (enabled ? "ON" : "OFF")));
     }
     public static void refreshInstance(){
-        enabled = Configs.getSpawnProofOn();
-        printMessageToChat(Text.of("Spawnproofing Turned "+ "%s".format(enabled ? "ON" : "OFF")));
+        enabled = false;
+        printMessageToChat(Text.of("Spawnproofing Turned "+ "OFF"));
     }
     public static boolean isEnabled(){
         return enabled;
@@ -86,7 +83,7 @@ public class SpawnProofLocation {
         BlockPos playerPos = MinecraftClient.getInstance().player.getBlockPos();
         BlockPos.streamOutwards(playerPos, reachDistance, reachDistance, reachDistance).
                 filter(a-> isSpawnableBlock(a.asLong())).
-                filter(a-> playerPos.getSquaredDistance(a,true)<reachDistance * reachDistance).
+                filter(a-> playerPos.getSquaredDistance(a)<reachDistance * reachDistance).
                 filter(a-> !playerPos.isWithinDistance(a, 2)).
                 filter(a-> !nanotimeMap.containsValue(a.asLong()) || nanotimeMap.get(a.asLong()) > System.nanoTime()+1e9).
                 limit(maxInteractionPerTick).
@@ -105,17 +102,19 @@ public class SpawnProofLocation {
         Vec3d hitVec = new Vec3d(blockPos.getX() , blockPos.getY(), blockPos.getZ());
         Hand hand = Hand.MAIN_HAND;
         BlockHitResult hitResult = new BlockHitResult(hitVec, Direction.NORTH, blockPos, false);
-        mc.interactionManager.interactBlock(mc.player, mc.world, hand, hitResult);
+        mc.interactionManager.interactBlock(mc.player, hand, hitResult);
         nanotimeMap.put(blockPos.asLong(),System.nanoTime());
     }
     private static int getCarpetItem(){
-        int slotNum = -1;
-        for (Item i : spawnProofItems){
-            slotNum = mc.player.getInventory().getSlotWithStack(i.getDefaultStack());
-            if (slotNum != -1){
-                return slotNum;
-            }
-        }
+	    Inventory inventory = mc.player.getInventory();
+		for (int i = 0; i < inventory.size(); i++){
+			for (TagKey<Item> predicates : spawnProofItems){
+				ItemStack stack = inventory.getStack(i);
+				if (stack.isIn(predicates)){
+					return i;
+				}
+			}
+		}
         return -1;
     }
     public static boolean playerInventorySwitch(Item itemName){
